@@ -1,5 +1,7 @@
 *SVN*
 
+* Added Base#expires_in(seconds)/Base#expires_now to control HTTP content cache headers #1755 [Thomas Fuchs]
+
 * Fixed line number reporting for Builder template errors #1753 [piotr]
 
 * Fixed assert_routing so that testing controllers in modules works as expected [Nicholas Seckar, Rick Olson]
